Fix positioning of form display on small screen

--- a/src/Styles/app.css
+++ b/src/Styles/app.css
@@ -73,6 +73,9 @@ input{
     main {
         grid-template-columns: 100%;
     }
+    .formDisp{
+        justify-self: center;
+    }
 }
 
 @media (prefers-color-scheme: dark){
